--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         <!-- Footer -->
         <div class="w-full h-[100px] bg-black flex flex-wrap justify-center">
             <div class="w-[100%] h-full text-[12px] md:text-[16px] flex flex-wrap justify-center">
-                <p class="w-full text-[10px] md:text-[16px] md:w-[70%] h-full text-white flex justify-center items-center">© 2023 copyright all right reserved | Design & Developed By: &nbsp;<strong><a href="https://www.linkedin.com/in/aliafrouz/" target="_blank" class="text-mainColor hover:bg-white/20 p-2 rounded-lg">Ali Afrouz</a></strong></p>
+                <p class="w-full text-[10px] md:text-[16px] md:w-[70%] h-full text-white flex justify-center items-center">© 2023 copyright all right reserved | Design & Developed By: &nbsp;<strong><a href="https://www.linkedin.com/in/alinajafi-developer/" target="_blank" class="text-mainColor hover:bg-white/20 p-2 rounded-lg">Ali Najafi</a></strong></p>
             </div>
         </div>
         <!-- Footer -->
